--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/ui.css">
+    <link rel="stylesheet" href="css/bulk-purchase.css">
     <link rel="stylesheet" href="css/animations.css">
 
     <!-- Google Fonts -->
@@ -35,6 +36,10 @@
                 </div>
             </div>
             <div class="stat-group">
+                <!-- 悟りボタン（転生可能時にPVの左に表示） -->
+                <button id="prestige-button" class="enlighten-btn" style="display: none;" title="悟りを開く">
+                    🪷 悟りを開く
+                </button>
                 <div class="stat-item pv-display">
                     <span class="stat-label">PV</span>
                     <span id="pv-count" class="stat-value">3</span>
@@ -56,6 +61,13 @@
                         <button id="menu-settings" class="dropdown-item">⚙️ 設定</button>
                     </div>
                 </div>
+            </div>
+        </div>
+        <!-- フレーバーテキストティッカー (ヘッダー内へ移動) -->
+        <div id="flavor-ticker" class="flavor-ticker">
+            <div class="ticker-content">
+                <span class="ticker-icon">🪷</span>
+                <span id="flavor-content">システム起動中...</span>
             </div>
         </div>
     </header>
@@ -134,18 +146,11 @@
     <!-- フッター (PC用) -->
     <footer id="game-footer">
         <div class="footer-content">
-            <button id="prestige-button" class="footer-btn prestige" style="display: none;">🌟 悟り</button>
             <span id="auto-save-indicator">自動保存: 有効</span>
         </div>
     </footer>
 
-    <!-- フレーバーテキストティッカー -->
-    <div id="flavor-ticker" class="flavor-ticker">
-        <div class="ticker-content">
-            <span class="ticker-icon">🪷</span>
-            <span id="flavor-content">システム起動中...</span>
-        </div>
-    </div>
+
 
     <!-- モーダル: 転生確認 -->
     <div id="prestige-modal" class="modal" style="display: none;">
@@ -198,7 +203,17 @@
                             <span class="slider round"></span>
                         </label>
                     </div>
-                    <p class="setting-desc">クリック時や購入時のエフェクトを表示します（軽量化にはOFF推奨）</p>
+                    <p class="setting-desc">クリック時のエフェクトを表示します</p>
+                </div>
+                <div class="setting-item">
+                    <div class="setting-row">
+                        <span class="setting-label">記事落下エフェクト</span>
+                        <label class="toggle-switch">
+                            <input type="checkbox" id="setting-fall-effect" checked>
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                    <p class="setting-desc">記事生成時に紙が降り積もる演出（軽量化にはOFF推奨）</p>
                 </div>
                 <div class="setting-item">
                     <div class="setting-row">
@@ -209,6 +224,13 @@
                         </label>
                     </div>
                 </div>
+                <hr>
+                <h3 class="setting-section-title">データ管理</h3>
+                <div class="setting-item data-buttons">
+                    <button id="settings-export" class="btn-data">📤 エクスポート</button>
+                    <button id="settings-import" class="btn-data">📥 インポート</button>
+                </div>
+                <p class="setting-desc">セーブデータを別端末に移行したり、バックアップを取れます</p>
                 <hr>
                 <button id="settings-reset-save" class="btn-danger">進行状況をリセット</button>
             </div>
@@ -232,6 +254,19 @@
     <!-- 喝！表示 -->
     <div id="katsu-display" class="katsu" style="display: none;">喝！</div>
 
+    <!-- 除夜の鐘イベント -->
+    <div id="bell-event" class="bell-event" style="display: none;">
+        <div class="bell-icon">🔔</div>
+        <div class="bell-shine"></div>
+    </div>
+
+    <!-- 鐘ブースト表示 -->
+    <div id="bell-boost-indicator" class="bell-boost-indicator" style="display: none;">
+        <span class="boost-icon">🔔</span>
+        <span class="boost-text">108x</span>
+        <span id="boost-timer" class="boost-timer">30s</span>
+    </div>
+
     <!-- 通知エリア -->
     <div id="notification-area"></div>
 
@@ -239,12 +274,15 @@
     <script src="js/lib/break_infinity.min.js"></script>
     <script src="js/utils/constants.js"></script>
     <script src="js/utils/save.js"></script>
+    <script src="js/utils/debug.js"></script>
     <script src="js/game/core.js"></script>
     <script src="js/game/buildings.js"></script>
     <script src="js/game/upgrades.js"></script>
     <script src="js/game/prestige.js"></script>
     <script src="js/game/zen.js"></script>
+    <script src="js/game/bell.js"></script>
     <script src="js/ui/display.js"></script>
+    <script src="js/ui/effects.js"></script>
     <script src="js/ui/modal.js"></script>
     <script src="js/ui/notifications.js"></script>
     <script src="js/ui/settings.js"></script>
